changed all name references to COVID

--- a/src/app/routes/ehr-instructions/ehr-login.component.html
+++ b/src/app/routes/ehr-instructions/ehr-login.component.html
@@ -53,7 +53,7 @@
     
         <div class="instructionBlock">
             <h4 class="display-4 instructionHeading">Server Information</h4>
-            <p>The SMART Cancer Navigator connects to two medical records servers: <b>Vetarans Affairs (VA)</b> and <b>Centers for Medicare and Medicaid Services (CMS)</b>.</p>
+            <p>The SMART COVID Navigator connects to two medical records servers: <b>Vetarans Affairs (VA)</b> and <b>Centers for Medicare and Medicaid Services (CMS)</b>.</p>
             
             <p>The app can connect to these servers to display data about a patient's conditions.</p>
         </div>
