--- a/src/app/routes/home/home.html
+++ b/src/app/routes/home/home.html
@@ -19,6 +19,9 @@
                 SMART COVID Navigator将来自多个EHR服务器的患者信息连接到AI驱动的COVID-19研究知识地图。这将使临床医生可以根据特定患者的风险因素访问最新的数据驱动的研究。 该导航器基于SMART Cancer Navigator开发的框架，该框架通过将患者的EHR信息与癌性基因变体联系起来提供了临床决策支持。 Navigator是创建基于FHIR协议的工具以支持个性化医学的又一步。
                      基于Web的应用程序是由哈佛医学院生物医学控制论实验室的研究人员构建的。 它是使用Angular和bootstrap前端框架创建的。
             </p>
+            <p>
+                If you would like to submit a comment, <a href="javascript:void(0);" (click)="showCommentModal()">click here</a>.
+            </p>
         </div>
     </div>
 
