--- a/src/app/routes/entry-and-visualization/clinical-trial-modal.html
+++ b/src/app/routes/entry-and-visualization/clinical-trial-modal.html
@@ -7,8 +7,8 @@
 <div class="modal-body">
     <div id="english">
         <p>Number of papers: {{totalPapers}}</p>
-        <p>Proportion of significant findings for severity: {{severeProportion}}%</p>
-        <p>Proportion of significant findings for fatality: {{fatalityProportion}}%</p>
+        <p>Proportion of significant findings for severity: {{severeProportion}}% <span style="color:red" *ngIf="severeProportion >= 50">The proportion is above 50%</span></p>
+        <p>Proportion of significant findings for fatality: {{fatalityProportion}}% <span style="color:red" *ngIf="severeProportion >= 50">The proportion is above 50%</span></p>
         
         <!-- A bit of info about the studies -->
         <table class="table table-bordered table-striped" *ngIf="clinicalTrials !== undefined">
