--- a/src/app/routes/ehr-instructions/ehr-login.component.html
+++ b/src/app/routes/ehr-instructions/ehr-login.component.html
@@ -42,7 +42,7 @@
         <div class="instructionBlock">
             <h4 class="display-4 instructionHeading">Logins</h4>
             <button (click)="vaSignIn()">  
-                Login to VA (test)
+                Login to VA
             </button> 
             <br><br>
             <button (click)="cmsSignIn()">  
